# libcio

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cio.c  cio.h
.github/workflows/: cmake-multi-platform.yml
docs/: Doxyfile
include/: cio.h
include/cio/: allocator.h  error.h  handle.h  loop.h  misc.h  thread.h
src/: allocator.c  cio.c  loop.c  misc.c  thread.c
test/: CMakeLists.txt  main.c
test/cases/: async.c  synchronization_once.c  synchronization_thread.c  synchronization_thread_key.c
